# INDONESIAN-SIGN-LANGUEAGE-detector-using-YOLO12-increase-Boost-FPS

./: .gitignore  README.md  pyproject.toml  realtime.py  requirements.txt  run_realtime.py
.github/: copilot-instructions.md
configs/: data.yaml  params.yaml  semantic_prior.json
scripts/: per_class_thresholds.py
src/: __init__.py  realtime.py
src/yolo12/: dataset.py  evaluation.py  infer.py  markov.py  realtime.py  sequence.py  train.py
src/yolo12/utils/: metrics.py  tracker.py  visualize.py
